Add Scanner button to the FTC Visa Dashboard

--- a/static/index.html
+++ b/static/index.html
@@ -103,6 +103,9 @@
     <h1>
         FTC Visa Dashboard
         <button class="logout-btn" id="logoutBtn">Logout</button>
+        <button class="logout-btn">
+            <a href="/scanner">Scanner</a>
+        </button>
     </h1>
     <div id="qrsContainer"></div>
 
