Fixed scanner and index

--- a/static/scanner.html
+++ b/static/scanner.html
@@ -155,6 +155,9 @@
         <div class="button-group">
             <button id="startScan">📷 Start Scan</button>
             <button id="unlockBtn" disabled>🔓 Unlock</button>
+            <button id="unlockBtn">
+                <a href="/dashboard" style="color: white; text-decoration: none;">Dashboard</a>
+            </button>
         </div>
 
         <div id="status">Idle</div>
