--- a/static/index.html
+++ b/static/index.html
@@ -104,7 +104,7 @@
         FTC Visa Dashboard
         <button class="logout-btn" id="logoutBtn">Logout</button>
         <button class="logout-btn">
-            <a href="/scanner">Scanner</a>
+            <a href="/scanner" style="color: white; text-decoration: none;">Scanner</a>
         </button>
     </h1>
     <div id="qrsContainer"></div>
